--- a/public/assets/global/css/components.css
+++ b/public/assets/global/css/components.css
@@ -3744,6 +3744,10 @@ Iconic labels
 /***
 Text states
 ***/
+.text-line-through {
+  text-decoration: line-through;
+}
+
 .text-default {
   color: #c6c6c6;
 }
